add legend html in line colour

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
   <div class='fullContainer'>
     <div id='sidebar'> TEXT</div>
+    <div id='legend'>
+  <h4>Clandestine Centers</h4>
+  <div><span style="background-color: #e55e5e"></span>Police</div>
+  <div><span style="background-color: #fbb03b"></span>Other</div>
+  </div>
     <div id='map'> Map</div>
   </div>
 
