--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <body>
 
   <div class='fullContainer'>
-    <div id='sidebar'> TEXT</div>
+    <div id='sidebar'>
+    <h2>Sites of disappearance of Argentina's military junta</h2>
+   <p> <br>
+     The term <i> desaparecidos </i>(“disappeared”) has been used in Argentina and other Latin American countries in reference to the thousands of civilians and guerrillas taken by the state military systems, never to be seen again. Many <i> desaparecidos </i> were journalists, artists, and students, some of who belonged to formal opposition of the military junta. At the time of disappearance, family members and friends wouldn’t know where the individual was taken from or by who they were taken, let alone where they were taken to. <br><br> To this day, the recovery of information regarding the fate of <i> desaparecidos </i> and children born in captivity is still a process being undertaken by both governmental and non-governmental groups, within and outside of Argentina. While there are an estimated 20,000-30,000 people to have disappeared, only around 8,000 have been documented. <br><br> In addition to the identification of individual remains, sites of disappearance - 726 clandestine centers of detention (CCDs) - have also been identified. This map explores the locations of these facilities, many of which were primarily police stations.
+</p></div>
     <div id='legend'>
   <h4>Clandestine Centers</h4>
-  <div><span style="background-color: #e55e5e"></span>Police</div>
+  <div><span style="background-color: #e55e5e"></span>Police Station</div>
   <div><span style="background-color: #fbb03b"></span>Other</div>
   </div>
     <div id='map'> Map</div>
